# itb-rust

./: Cargo.toml  README.md  build.sh  run_bench.sh  run_tests.sh
benches/: BENCH.md  README.md  bench_single.rs  bench_triple.rs  bench_wrapper.rs  common.rs
examples/: eitb.rs
src/: blob.rs  encrypt.rs  encryptor.rs  error.rs  ffi.rs  lib.rs  mac.rs  registry.rs  seed.rs  streams.rs  wrapper.rs
tests/: test_aescmac.rs  test_areion.rs  test_attach_lock_seed.rs  test_auth.rs  test_blake2b.rs  test_blake2s.rs  test_blake3.rs  test_blob.rs  test_chacha20.rs  test_config.rs  test_easy.rs  test_easy_aescmac.rs  test_easy_areion.rs  test_easy_auth.rs  test_easy_blake2b.rs  test_easy_blake2s.rs  test_easy_blake3.rs  test_easy_chacha20.rs  test_easy_mixed.rs  test_easy_nonce_sizes.rs  test_easy_persistence.rs  test_easy_roundtrip.rs  test_easy_siphash24.rs  test_easy_streams.rs  test_easy_streams_auth.rs  test_nonce_sizes.rs  test_persistence.rs  test_roundtrip.rs  test_siphash24.rs  test_streams.rs  test_streams_auth.rs  test_streams_nonce.rs  test_wrapper.rs
tests/common/: mod.rs
wrapper/: BENCH.md  README.md
